Single column layout breaks file browser #60037

Closed
opened 2019-01-01 16:24:28 +01:00 by Robert Guetzkow · 4 comments

System Information
Operating system: Windows 10 64-bit
Graphics card: Nvidia GeForce GTX 1080Ti

Blender Version
Broken: 4d795cee4938

Short description of error
Setting

layout.use_property_split = True 

as recommended in the documentation causes non-responsive file/directory browser button on StringProperty with subtype set to "DIR_PATH". Clicking the button will not open the file browser.

Exact steps for others to reproduce the error
Load and run the script. It creates a panel in Render > Hair Sample Render.init.py

**System Information** Operating system: Windows 10 64-bit Graphics card: Nvidia GeForce GTX 1080Ti **Blender Version** Broken: 4d795cee4938 **Short description of error** Setting ``` layout.use_property_split = True ``` as recommended in the [documentation](https://wiki.blender.org/wiki/Reference/Release_Notes/2.80/Python_API/UI_API) causes non-responsive file/directory browser button on StringProperty with subtype set to "DIR_PATH". Clicking the button will not open the file browser. **Exact steps for others to reproduce the error** Load and run the script. It creates a panel in Render > Hair Sample Render.[__init__.py](https://archive.blender.org/developer/F6140745/__init__.py)
Author
Member

Added subscriber: @rjg

Added subscriber: @rjg
Robert Guetzkow changed title from Single column layout breaks file dialog to Single column layout breaks file browser 2019-01-01 16:27:04 +01:00
Author
Member

I believe this is a bug and unless use_property_split should not be used in certain situations. If that is the case the documentation should reflect this.

I believe this is a bug and unless use_property_split should not be used in certain situations. If that is the case the documentation should reflect this.

This issue was referenced by blender/blender@8063d72b08

This issue was referenced by blender/blender@8063d72b08d2e219ebb2087e6188a8f2186f398d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#60037
No description provided.