Fix T60037: single column layout breaks file browse button.